// These are the messages that get persisted - the events, plus the current state (Cart) for snapshots.
syntax = "proto3";

package com.example.shoppingcart.persistence;

option go_package = "persistence";

// The item added event.
message ItemAdded {
    string productId = 1;
    string name = 2;
    int32 quantity = 3;
}

// The item removed event.
message ItemRemoved {
    string productId = 1;
}

message LineItem {
    string name = 2;
    int32 quantity = 3;
}

// The shopping cart state.
message Cart {
    map<string, LineItem> items = 1;
}
